# chord-composer-interface

./: Cargo.toml  README.md  translations.txt  translations.yaml
examples/: export_composition.sh  export_composition_zhn.sh  export_generative_composition.sh  play_composition.sh  play_composition_zhn.sh  print_chords.sh
src/: language.rs  main.rs
tests/: middle_c.yaml  test_interface.rs
