[package]
name = "chord-composer-interface"
version = "0.1.0"
authors = ["cj <cj>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
eng = []
pt = []
zhn = []

[dependencies]
chord-composer = { git = "https://github.com/unsignedbytebite/chord-composer.git", branch="dev_0_2_9"}
clap = "*"
music-timer = "*"
